# tencent-mars-xlog-rust

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.sh  build_macos.sh  build_win_on_macos.sh  decode_mars_crypt_log_file.py  decode_mars_nocrypt_log_file.py
ios_xlog_sample/ios_xlog_sample/: AppDelegate.h  AppDelegate.m  Info.plist  LogViewController.h  LogViewController.m  LogViewController.xib  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.mm  XlogDecoder.h  XlogDecoder.m  main.m
ios_xlog_sample/ios_xlog_sample.xcodeproj/: project.pbxproj
ios_xlog_sample/ios_xlog_sample/Base.lproj/: Main.storyboard
ios_xlog_sample/ios_xlog_sample/mars.framework/Headers/comm/: verinfo.h
micro-uecc-safe/: Cargo.toml
micro-uecc-safe/micro-uecc-sys/: Cargo.toml  build.rs
micro-uecc-safe/micro-uecc-sys/src/: bindings.rs  lib.rs
micro-uecc-safe/src/: lib.rs
sample_data/: custom.env  encrypt_sample_data.xlog  zlib_async_crypt_20220110.xlog  zlib_async_no_crypt_20220110.xlog  zlib_sync_crypt_20220110.xlog  zlib_sync_no_crypt_20220110.xlog  zstd_async_crypt_20220110.xlog  zstd_async_no_crypt_20220110.xlog  zstd_sync_crypt_20220110.xlog  zstd_sync_no_crypt_20220110.xlog
src/: decode.rs  main.rs  utils.rs
