[package]
name = "tencent-mars-xlog"
version = "0.1.0"
authors = ["0x1306a94 <0x1306a94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micro-uecc-safe = { path = "micro-uecc-safe", version = "*" }
clap = { version = "3.0.5", features = ["derive"] }
memmap = "0.7.0"
anyhow = "1.0.52"
dotenv = "0.15.0"
compress = "0.2.1"
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
